--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "background.js",
   "scripts": {
     "mkdir-dist": "rm -rf dist &&  mkdir dist",
-    "build": "npm run mkdir-dist && zip -r dist/dolphin.zip src",
+    "build": "npm run mkdir-dist && crx pack ./src -o dist/dolphin.crx",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -18,6 +18,7 @@
   "license": "ISC",
   "dependencies": {},
   "devDependencies": {
+    "crx": "^5.0.1",
     "git-commit-msg-linter": "^2.3.9"
   },
   "repository": {
