--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "crx": "^5.0.1",
     "git-commit-msg-linter": "^2.3.9"
   },
+  "publishConfig": { "registry": "https://npm.pkg.github.com/" },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/legend80s/dolphin.git"
